--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@p5-wrapper/next": "^1.0.3",
     "@p5-wrapper/react": "^4.3.0",
     "next": "14.0.3",
+    "p5": "^1.9.4",
+    "p5.js-svg": "^1.5.1",
     "react": "^18",
     "react-dom": "^18"
   },
