downgraded @p5-wrapper/react to fix crashing
° helpful people on github came through for me
° "@p5-wrapper/react": "4.4.0"

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@p5-wrapper/next": "^1.0.3",
-    "@p5-wrapper/react": "^4.3.0",
+    "@p5-wrapper/react": "4.4.0",
     "next": "14.0.3",
     "p5": "^1.9.4",
     "p5.js-svg": "^1.5.1",
